--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
-    "layercake": "latest",
+    "layercake": "^3.1.1",
     "d3-dsv": "latest",
     "regl": "latest",
     "regl-tween": "latest",
