--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.0",
     "layercake": "latest",
     "d3-dsv": "latest",
     "regl": "latest",
     "regl-tween": "latest",
     "d3-quadtree": "latest"
-  },
-  "dependencies": {
-    "sirv-cli": "^1.0.0"
   },
   "main": "index.mjs",
   "directories": {
