--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "Reusable chart templates for Svelte projects.",
   "module": "index.mjs",
   "svelte": "index.mjs",
   "files": [
     "index.mjs",
-    "charts",
-    "maps",
-    "templates",
-    "public",
-    "js"
+    "src",
+    "public"
   ],
   "scripts": {
-    "build": "rollup -c rollup.config.app.js --environment module:ScatterChart",
-    "dev": "rollup -c rollup.config.test.js -w",
-    "start": "sirv public",
+    "build": "rollup -c rollup.config.build.js",
+    "dev": "rollup -c rollup.config.dev.js -w",
+    "start": "sirv dist",
     "test": "echo \"No test specified\""
   },
   "repository": {
@@ -24,9 +21,10 @@
   },
   "keywords": [
     "svelte",
-    "svg",
     "charts",
-    "dataviz"
+    "layercake",
+    "dataviz",
+    "svg"
   ],
   "author": "Ahmad Barclay",
   "license": "MIT",
@@ -35,21 +33,27 @@
   },
   "homepage": "https://github.com/onsvisual/svelte-charts#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "rollup": "^2.33.3",
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-dsv": "^2.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "html-minifier": "^4.0.0",
+    "rollup": "^2.38.5",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.1.1",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.29.7"
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.32.2"
   },
   "dependencies": {
+    "clean-css": "^4.2.3",
     "sirv-cli": "^1.0.0",
     "layercake": "latest",
     "d3-dsv": "latest",
+    "d3-quadtree": "latest",
     "regl": "latest",
-    "regl-tween": "latest",
-    "d3-quadtree": "latest"
+    "regl-tween": "latest"
   },
   "main": "index.mjs",
   "directories": {
