--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Reusable chart templates for Svelte projects.",
+  "homepage": "http://onsvisual.github.io/svelte-charts",
   "module": "index.mjs",
   "svelte": "index.mjs",
   "files": [
@@ -13,7 +14,8 @@
     "build": "rollup -c rollup.config.build.js",
     "dev": "rollup -c rollup.config.dev.js -w",
     "start": "sirv dist",
-    "test": "echo \"No test specified\""
+    "test": "echo \"No test specified\"",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -31,12 +33,12 @@
   "bugs": {
     "url": "https://github.com/onsvisual/svelte-charts/issues"
   },
-  "homepage": "https://github.com/onsvisual/svelte-charts#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-dsv": "^2.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "gh-pages": "^3.2.3",
     "html-minifier": "^4.0.0",
     "rollup": "^2.38.5",
     "rollup-plugin-css-only": "^3.1.0",
@@ -48,12 +50,12 @@
   },
   "dependencies": {
     "clean-css": "^4.2.3",
-    "sirv-cli": "^1.0.0",
-    "layercake": "latest",
     "d3-dsv": "latest",
     "d3-quadtree": "latest",
+    "layercake": "latest",
     "regl": "latest",
-    "regl-tween": "latest"
+    "regl-tween": "latest",
+    "sirv-cli": "^1.0.0"
   },
   "main": "index.mjs",
   "directories": {
