--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "description": "Reusable chart templates for Svelte projects.",
   "homepage": "http://onsvisual.github.io/svelte-charts",
   "module": "index.mjs",
@@ -54,6 +54,7 @@
     "d3-delaunay": "^6.0.2",
     "d3-dsv": "latest",
     "d3-quadtree": "latest",
+    "d3-scale": "^4.0.2",
     "layercake": "latest",
     "regl": "latest",
     "regl-tween": "latest",
