--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.1.28",
+  "version": "0.1.29",
   "description": "Reusable chart templates for Svelte projects.",
   "homepage": "http://onsvisual.github.io/svelte-charts",
   "module": "index.mjs",
@@ -41,6 +41,7 @@
     "debounce": "^1.2.1",
     "gh-pages": "^3.2.3",
     "html-minifier": "^4.0.0",
+    "html2canvas": "^1.3.3",
     "rollup": "^2.38.5",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-execute": "^1.1.1",
