--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.1.29",
+  "version": "0.1.31",
   "description": "Reusable chart templates for Svelte projects.",
   "homepage": "http://onsvisual.github.io/svelte-charts",
   "module": "index.mjs",
@@ -48,6 +48,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sirv-cli": "^1.0.0",
     "svelte": "^3.32.2"
   },
   "dependencies": {
@@ -58,8 +59,7 @@
     "d3-scale": "^4.0.2",
     "layercake": "latest",
     "regl": "latest",
-    "regl-tween": "latest",
-    "sirv-cli": "^1.0.0"
+    "regl-tween": "latest"
   },
   "main": "index.mjs",
   "directories": {
