--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3-dsv": "latest",
     "d3-quadtree": "latest",
     "d3-scale": "^4.0.2",
+    "d3-time-format": "^4.1.0",
     "html2canvas": "^1.3.3",
     "layercake": "latest",
     "regl": "latest",
