--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Reusable chart templates for Svelte projects.",
   "homepage": "http://onsvisual.github.io/svelte-charts",
   "module": "index.mjs",
@@ -58,7 +58,7 @@
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
     "html2canvas": "^1.3.3",
-    "layercake": "latest",
+    "layercake": "^6.1.2",
     "regl": "latest",
     "regl-tween": "latest"
   },
