--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "description": "Reusable chart templates for Svelte projects.",
   "homepage": "http://onsvisual.github.io/svelte-charts",
   "module": "index.mjs",
@@ -47,10 +47,9 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sirv-cli": "^1.0.0",
-    "svelte": "^3.55.1"
+    "sirv-cli": "^1.0.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "clean-css": "^4.2.3",
     "d3-delaunay": "^6.0.2",
     "d3-dsv": "latest",
@@ -60,7 +59,8 @@
     "html2canvas": "^1.3.3",
     "layercake": "^7.2.2",
     "regl": "latest",
-    "regl-tween": "latest"
+    "regl-tween": "latest",
+    "svelte": "3 - 4"
   },
   "main": "index.mjs",
   "directories": {
