--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onsvisual/svelte-charts",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "Reusable chart templates for Svelte projects.",
   "homepage": "http://onsvisual.github.io/svelte-charts",
   "files": [
@@ -53,7 +53,7 @@
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
     "layercake": "^8.4.3",
-    "svelte": "3 - 5"
+    "svelte": "^4.2.20"
   },
   "main": "./index.mjs",
   "module": "./index.mjs",
